Práctica 5/src/y.output
State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: $@1 PRINCIPAL $@2 bloque

    4 $@3: %empty

    5 $@4: %empty

    6 $@5: %empty

    7 bloque: INI_BLOQUE $@3 $@4 bloque2 FIN_BLOQUE $@5

    8 bloque2: declar_de_variables_locales declar_de_subprogs
    9        | declar_de_variables_locales declar_de_subprogs sentencias

   10 declar_de_subprogs: declar_de_subprogs declar_subprog
   11                   | %empty

   12 $@6: %empty

   13 declar_subprog: cabecera_subprograma $@6 bloque

   14 $@7: %empty

   15 declar_de_variables_locales: INI_VAR_LOCAL $@7 variables_locales FIN_VAR_LOCAL
   16                            | %empty

   17 variables_locales: variables_locales cuerpo_declar_variables
   18                  | cuerpo_declar_variables

   19 $@8: %empty

   20 $@9: %empty

   21 cuerpo_declar_variables: TIPO_BASICO $@8 $@9 lista_variables PUNTO_Y_COMA
   22                        | error

   23 $@10: %empty

   24 $@11: %empty

   25 cabecera_subprograma: TIPO_BASICO IDENTIFICADOR $@10 $@11 PARENT_IZQUIERDO cabecera_subprograma2

   26 $@12: %empty

   27 $@13: %empty

   28 cabecera_subprograma2: lista_parametros PARENT_DERECHO $@12 $@13
   29                      | PARENT_DERECHO

   30 $@14: %empty

   31 sentencias: sentencias $@14 sentencia

   32 $@15: %empty

   33 sentencias: $@15 sentencia

   34 $@16: %empty

   35 sentencia: $@16 bloque
   36          | sentencia_asignacion

   37 $@17: %empty

   38 sentencia: $@17 sentencia_si

   39 $@18: %empty

   40 sentencia: $@18 sentencia_mientras

   41 $@19: %empty

   42 sentencia: $@19 sentencia_entrada

   43 $@20: %empty

   44 sentencia: $@20 sentencia_salida

   45 $@21: %empty

   46 sentencia: $@21 sentencia_devolver

   47 $@22: %empty

   48 sentencia: $@22 sentencia_hacer_hasta

   49 sentencia_asignacion: variable ASIGNACION expresion PUNTO_Y_COMA

   50 sentencia_si: SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia

   51 $@23: %empty

   52 $@24: %empty

   53 sentencia_si: SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO $@23 sentencia $@24

   54 $@25: %empty

   55 sentencia_hacer_hasta: HACER sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO $@25

   56 $@26: %empty

   57 sentencia_mientras: MIENTRAS PARENT_IZQUIERDO expresion PARENT_DERECHO $@26 sentencia

   58 sentencia_entrada: ENTRADA CADENA PUNTO_Y_COMA
   59                  | ENTRADA CADENA COMA lista_variables PUNTO_Y_COMA

   60 sentencia_salida: SALIDA lista_expresiones_o_cadena PUNTO_Y_COMA

   61 @27: %empty

   62 sentencia_devolver: DEVOLVER expresion @27 PUNTO_Y_COMA

   63 expresion: PARENT_IZQUIERDO expresion PARENT_DERECHO
   64          | OP_UNARIO expresion
   65          | constante
   66          | funcion
   67          | variable
   68          | OPSIGNO expresion
   69          | expresion OPSIGNO expresion
   70          | expresion OPMULTIPLICATIVO expresion
   71          | expresion OPIGUALDAD expresion
   72          | expresion OPRELACION expresion
   73          | expresion OPAND expresion
   74          | expresion OPOR expresion
   75          | error

   76 lista_variables: lista_variables COMA var_array
   77                | var_array
   78                | lista_variables error var_array

   79 variable: IDENTIFICADOR
   80         | IDENTIFICADOR INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
   81         | IDENTIFICADOR INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ

   82 var_array: IDENTIFICADOR
   83          | IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ
   84          | IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ
   85          | error

   86 lista_parametros: lista_parametros COMA TIPO_BASICO variable
   87                 | TIPO_BASICO variable
   88                 | lista_parametros error TIPO_BASICO variable

   89 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_o_cadena
   90                           | expresion_o_cadena

   91 expresion_o_cadena: expresion
   92                   | CADENA

   93 lista_expresiones: lista_expresiones COMA expresion
   94                  | expresion

   95 constante: CONST_ENTERO_SIN_SIGNO
   96          | const_matriz
   97          | CONST_LOGICA
   98          | CONST_FLOTANTE
   99          | CONST_CARACTER

  100 funcion: IDENTIFICADOR PARENT_IZQUIERDO lista_expresiones PARENT_DERECHO
  101        | IDENTIFICADOR PARENT_IZQUIERDO PARENT_DERECHO

  102 const_matriz: INI_BLOQUE lista_expresiones FIN_BLOQUE


Terminals, with rules where they appear

$end (0) 0
error (256) 22 75 78 85 88
OPOR (258) 74
OPAND (259) 73
OPIGUALDAD (260) 71
OPRELACION (261) 72
OPSIGNO (262) 68 69
OPMULTIPLICATIVO (263) 70
OP_UNARIO (264) 64
PRINCIPAL (265) 3
INI_BLOQUE (266) 7 102
FIN_BLOQUE (267) 7 102
PUNTO_Y_COMA (268) 21 49 58 59 60 62
COMA (269) 59 76 86 89 93
PARENT_IZQUIERDO (270) 25 50 53 55 57 63 100 101
PARENT_DERECHO (271) 28 29 50 53 55 57 63 100 101
INI_VAR_LOCAL (272) 15
FIN_VAR_LOCAL (273) 15
ASIGNACION (274) 49
INI_DIM_MATRIZ (275) 80 81 83 84
FIN_DIM_MATRIZ (276) 80 81 83 84
SI (277) 50 53
SI_NO (278) 53
HACER (279) 55
HASTA (280) 55
MIENTRAS (281) 57
DEVOLVER (282) 62
TIPO_BASICO (283) 21 25 86 87 88
ENTRADA (284) 58 59
SALIDA (285) 60
CONST_LOGICA (286) 97
CADENA (287) 58 59 92
CONST_ENTERO_SIN_SIGNO (288) 83 84 95
CONST_FLOTANTE (289) 98
CONST_CARACTER (290) 99
IDENTIFICADOR (291) 25 79 80 81 82 83 84 100 101


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
programa (38)
    on left: 3, on right: 0
$@1 (39)
    on left: 1, on right: 3
$@2 (40)
    on left: 2, on right: 3
bloque (41)
    on left: 7, on right: 3 13 35
$@3 (42)
    on left: 4, on right: 7
$@4 (43)
    on left: 5, on right: 7
$@5 (44)
    on left: 6, on right: 7
bloque2 (45)
    on left: 8 9, on right: 7
declar_de_subprogs (46)
    on left: 10 11, on right: 8 9 10
declar_subprog (47)
    on left: 13, on right: 10
$@6 (48)
    on left: 12, on right: 13
declar_de_variables_locales (49)
    on left: 15 16, on right: 8 9
$@7 (50)
    on left: 14, on right: 15
variables_locales (51)
    on left: 17 18, on right: 15 17
cuerpo_declar_variables (52)
    on left: 21 22, on right: 17 18
$@8 (53)
    on left: 19, on right: 21
$@9 (54)
    on left: 20, on right: 21
cabecera_subprograma (55)
    on left: 25, on right: 13
$@10 (56)
    on left: 23, on right: 25
$@11 (57)
    on left: 24, on right: 25
cabecera_subprograma2 (58)
    on left: 28 29, on right: 25
$@12 (59)
    on left: 26, on right: 28
$@13 (60)
    on left: 27, on right: 28
sentencias (61)
    on left: 31 33, on right: 9 31
$@14 (62)
    on left: 30, on right: 31
$@15 (63)
    on left: 32, on right: 33
sentencia (64)
    on left: 35 36 38 40 42 44 46 48, on right: 31 33 50 53 55 57
$@16 (65)
    on left: 34, on right: 35
$@17 (66)
    on left: 37, on right: 38
$@18 (67)
    on left: 39, on right: 40
$@19 (68)
    on left: 41, on right: 42
$@20 (69)
    on left: 43, on right: 44
$@21 (70)
    on left: 45, on right: 46
$@22 (71)
    on left: 47, on right: 48
sentencia_asignacion (72)
    on left: 49, on right: 36
sentencia_si (73)
    on left: 50 53, on right: 38
$@23 (74)
    on left: 51, on right: 53
$@24 (75)
    on left: 52, on right: 53
sentencia_hacer_hasta (76)
    on left: 55, on right: 48
$@25 (77)
    on left: 54, on right: 55
sentencia_mientras (78)
    on left: 57, on right: 40
$@26 (79)
    on left: 56, on right: 57
sentencia_entrada (80)
    on left: 58 59, on right: 42
sentencia_salida (81)
    on left: 60, on right: 44
sentencia_devolver (82)
    on left: 62, on right: 46
@27 (83)
    on left: 61, on right: 62
expresion (84)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75, on right: 49 50
    53 55 57 62 63 64 68 69 70 71 72 73 74 91 93 94
lista_variables (85)
    on left: 76 77 78, on right: 21 59 76 78
variable (86)
    on left: 79 80 81, on right: 49 67 86 87 88
var_array (87)
    on left: 82 83 84 85, on right: 76 77 78
lista_parametros (88)
    on left: 86 87 88, on right: 28 86 88
lista_expresiones_o_cadena (89)
    on left: 89 90, on right: 60 89
expresion_o_cadena (90)
    on left: 91 92, on right: 89 90
lista_expresiones (91)
    on left: 93 94, on right: 80 81 93 100 102
constante (92)
    on left: 95 96 97 98 99, on right: 65
funcion (93)
    on left: 100 101, on right: 66
const_matriz (94)
    on left: 102, on right: 96


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    3 programa: $@1 . PRINCIPAL $@2 bloque

    PRINCIPAL  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    3 programa: $@1 PRINCIPAL . $@2 bloque

    $default  reduce using rule 2 ($@2)

    $@2  go to state 5


State 5

    3 programa: $@1 PRINCIPAL $@2 . bloque

    INI_BLOQUE  shift, and go to state 6

    bloque  go to state 7


State 6

    7 bloque: INI_BLOQUE . $@3 $@4 bloque2 FIN_BLOQUE $@5

    $default  reduce using rule 4 ($@3)

    $@3  go to state 8


State 7

    3 programa: $@1 PRINCIPAL $@2 bloque .

    $default  reduce using rule 3 (programa)


State 8

    7 bloque: INI_BLOQUE $@3 . $@4 bloque2 FIN_BLOQUE $@5

    $default  reduce using rule 5 ($@4)

    $@4  go to state 9


State 9

    7 bloque: INI_BLOQUE $@3 $@4 . bloque2 FIN_BLOQUE $@5

    INI_VAR_LOCAL  shift, and go to state 10

    $default  reduce using rule 16 (declar_de_variables_locales)

    bloque2                      go to state 11
    declar_de_variables_locales  go to state 12


State 10

   15 declar_de_variables_locales: INI_VAR_LOCAL . $@7 variables_locales FIN_VAR_LOCAL

    $default  reduce using rule 14 ($@7)

    $@7  go to state 13


State 11

    7 bloque: INI_BLOQUE $@3 $@4 bloque2 . FIN_BLOQUE $@5

    FIN_BLOQUE  shift, and go to state 14


State 12

    8 bloque2: declar_de_variables_locales . declar_de_subprogs
    9        | declar_de_variables_locales . declar_de_subprogs sentencias

    $default  reduce using rule 11 (declar_de_subprogs)

    declar_de_subprogs  go to state 15


State 13

   15 declar_de_variables_locales: INI_VAR_LOCAL $@7 . variables_locales FIN_VAR_LOCAL

    error        shift, and go to state 16
    TIPO_BASICO  shift, and go to state 17

    variables_locales        go to state 18
    cuerpo_declar_variables  go to state 19


State 14

    7 bloque: INI_BLOQUE $@3 $@4 bloque2 FIN_BLOQUE . $@5

    $default  reduce using rule 6 ($@5)

    $@5  go to state 20


State 15

    8 bloque2: declar_de_variables_locales declar_de_subprogs .
    9        | declar_de_variables_locales declar_de_subprogs . sentencias
   10 declar_de_subprogs: declar_de_subprogs . declar_subprog

    TIPO_BASICO  shift, and go to state 21

    FIN_BLOQUE  reduce using rule 8 (bloque2)
    $default    reduce using rule 32 ($@15)

    declar_subprog        go to state 22
    cabecera_subprograma  go to state 23
    sentencias            go to state 24
    $@15                  go to state 25


State 16

   22 cuerpo_declar_variables: error .

    $default  reduce using rule 22 (cuerpo_declar_variables)


State 17

   21 cuerpo_declar_variables: TIPO_BASICO . $@8 $@9 lista_variables PUNTO_Y_COMA

    $default  reduce using rule 19 ($@8)

    $@8  go to state 26


State 18

   15 declar_de_variables_locales: INI_VAR_LOCAL $@7 variables_locales . FIN_VAR_LOCAL
   17 variables_locales: variables_locales . cuerpo_declar_variables

    error          shift, and go to state 16
    FIN_VAR_LOCAL  shift, and go to state 27
    TIPO_BASICO    shift, and go to state 17

    cuerpo_declar_variables  go to state 28


State 19

   18 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 18 (variables_locales)


State 20

    7 bloque: INI_BLOQUE $@3 $@4 bloque2 FIN_BLOQUE $@5 .

    $default  reduce using rule 7 (bloque)


State 21

   25 cabecera_subprograma: TIPO_BASICO . IDENTIFICADOR $@10 $@11 PARENT_IZQUIERDO cabecera_subprograma2

    IDENTIFICADOR  shift, and go to state 29


State 22

   10 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 10 (declar_de_subprogs)


State 23

   13 declar_subprog: cabecera_subprograma . $@6 bloque

    $default  reduce using rule 12 ($@6)

    $@6  go to state 30


State 24

    9 bloque2: declar_de_variables_locales declar_de_subprogs sentencias .
   31 sentencias: sentencias . $@14 sentencia

    FIN_BLOQUE  reduce using rule 9 (bloque2)
    $default    reduce using rule 30 ($@14)

    $@14  go to state 31


State 25

   33 sentencias: $@15 . sentencia

    IDENTIFICADOR  shift, and go to state 32

    SI        reduce using rule 37 ($@17)
    HACER     reduce using rule 47 ($@22)
    MIENTRAS  reduce using rule 39 ($@18)
    DEVOLVER  reduce using rule 45 ($@21)
    ENTRADA   reduce using rule 41 ($@19)
    SALIDA    reduce using rule 43 ($@20)
    $default  reduce using rule 34 ($@16)

    sentencia             go to state 33
    $@16                  go to state 34
    $@17                  go to state 35
    $@18                  go to state 36
    $@19                  go to state 37
    $@20                  go to state 38
    $@21                  go to state 39
    $@22                  go to state 40
    sentencia_asignacion  go to state 41
    variable              go to state 42


State 26

   21 cuerpo_declar_variables: TIPO_BASICO $@8 . $@9 lista_variables PUNTO_Y_COMA

    $default  reduce using rule 20 ($@9)

    $@9  go to state 43


State 27

   15 declar_de_variables_locales: INI_VAR_LOCAL $@7 variables_locales FIN_VAR_LOCAL .

    $default  reduce using rule 15 (declar_de_variables_locales)


State 28

   17 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 17 (variables_locales)


State 29

   25 cabecera_subprograma: TIPO_BASICO IDENTIFICADOR . $@10 $@11 PARENT_IZQUIERDO cabecera_subprograma2

    $default  reduce using rule 23 ($@10)

    $@10  go to state 44


State 30

   13 declar_subprog: cabecera_subprograma $@6 . bloque

    INI_BLOQUE  shift, and go to state 6

    bloque  go to state 45


State 31

   31 sentencias: sentencias $@14 . sentencia

    IDENTIFICADOR  shift, and go to state 32

    SI        reduce using rule 37 ($@17)
    HACER     reduce using rule 47 ($@22)
    MIENTRAS  reduce using rule 39 ($@18)
    DEVOLVER  reduce using rule 45 ($@21)
    ENTRADA   reduce using rule 41 ($@19)
    SALIDA    reduce using rule 43 ($@20)
    $default  reduce using rule 34 ($@16)

    sentencia             go to state 46
    $@16                  go to state 34
    $@17                  go to state 35
    $@18                  go to state 36
    $@19                  go to state 37
    $@20                  go to state 38
    $@21                  go to state 39
    $@22                  go to state 40
    sentencia_asignacion  go to state 41
    variable              go to state 42


State 32

   79 variable: IDENTIFICADOR .
   80         | IDENTIFICADOR . INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
   81         | IDENTIFICADOR . INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ

    INI_DIM_MATRIZ  shift, and go to state 47

    $default  reduce using rule 79 (variable)


State 33

   33 sentencias: $@15 sentencia .

    $default  reduce using rule 33 (sentencias)


State 34

   35 sentencia: $@16 . bloque

    INI_BLOQUE  shift, and go to state 6

    bloque  go to state 48


State 35

   38 sentencia: $@17 . sentencia_si

    SI  shift, and go to state 49

    sentencia_si  go to state 50


State 36

   40 sentencia: $@18 . sentencia_mientras

    MIENTRAS  shift, and go to state 51

    sentencia_mientras  go to state 52


State 37

   42 sentencia: $@19 . sentencia_entrada

    ENTRADA  shift, and go to state 53

    sentencia_entrada  go to state 54


State 38

   44 sentencia: $@20 . sentencia_salida

    SALIDA  shift, and go to state 55

    sentencia_salida  go to state 56


State 39

   46 sentencia: $@21 . sentencia_devolver

    DEVOLVER  shift, and go to state 57

    sentencia_devolver  go to state 58


State 40

   48 sentencia: $@22 . sentencia_hacer_hasta

    HACER  shift, and go to state 59

    sentencia_hacer_hasta  go to state 60


State 41

   36 sentencia: sentencia_asignacion .

    $default  reduce using rule 36 (sentencia)


State 42

   49 sentencia_asignacion: variable . ASIGNACION expresion PUNTO_Y_COMA

    ASIGNACION  shift, and go to state 61


State 43

   21 cuerpo_declar_variables: TIPO_BASICO $@8 $@9 . lista_variables PUNTO_Y_COMA

    error          shift, and go to state 62
    IDENTIFICADOR  shift, and go to state 63

    lista_variables  go to state 64
    var_array        go to state 65


State 44

   25 cabecera_subprograma: TIPO_BASICO IDENTIFICADOR $@10 . $@11 PARENT_IZQUIERDO cabecera_subprograma2

    $default  reduce using rule 24 ($@11)

    $@11  go to state 66


State 45

   13 declar_subprog: cabecera_subprograma $@6 bloque .

    $default  reduce using rule 13 (declar_subprog)


State 46

   31 sentencias: sentencias $@14 sentencia .

    $default  reduce using rule 31 (sentencias)


State 47

   80 variable: IDENTIFICADOR INI_DIM_MATRIZ . lista_expresiones FIN_DIM_MATRIZ
   81         | IDENTIFICADOR INI_DIM_MATRIZ . lista_expresiones FIN_DIM_MATRIZ INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion          go to state 77
    variable           go to state 78
    lista_expresiones  go to state 79
    constante          go to state 80
    funcion            go to state 81
    const_matriz       go to state 82


State 48

   35 sentencia: $@16 bloque .

    $default  reduce using rule 35 (sentencia)


State 49

   50 sentencia_si: SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia
   53             | SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO $@23 sentencia $@24

    PARENT_IZQUIERDO  shift, and go to state 83


State 50

   38 sentencia: $@17 sentencia_si .

    $default  reduce using rule 38 (sentencia)


State 51

   57 sentencia_mientras: MIENTRAS . PARENT_IZQUIERDO expresion PARENT_DERECHO $@26 sentencia

    PARENT_IZQUIERDO  shift, and go to state 84


State 52

   40 sentencia: $@18 sentencia_mientras .

    $default  reduce using rule 40 (sentencia)


State 53

   58 sentencia_entrada: ENTRADA . CADENA PUNTO_Y_COMA
   59                  | ENTRADA . CADENA COMA lista_variables PUNTO_Y_COMA

    CADENA  shift, and go to state 85


State 54

   42 sentencia: $@19 sentencia_entrada .

    $default  reduce using rule 42 (sentencia)


State 55

   60 sentencia_salida: SALIDA . lista_expresiones_o_cadena PUNTO_Y_COMA

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CADENA                  shift, and go to state 86
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion                   go to state 87
    variable                    go to state 78
    lista_expresiones_o_cadena  go to state 88
    expresion_o_cadena          go to state 89
    constante                   go to state 80
    funcion                     go to state 81
    const_matriz                go to state 82


State 56

   44 sentencia: $@20 sentencia_salida .

    $default  reduce using rule 44 (sentencia)


State 57

   62 sentencia_devolver: DEVOLVER . expresion @27 PUNTO_Y_COMA

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 90
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 58

   46 sentencia: $@21 sentencia_devolver .

    $default  reduce using rule 46 (sentencia)


State 59

   55 sentencia_hacer_hasta: HACER . sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO $@25

    IDENTIFICADOR  shift, and go to state 32

    SI        reduce using rule 37 ($@17)
    HACER     reduce using rule 47 ($@22)
    MIENTRAS  reduce using rule 39 ($@18)
    DEVOLVER  reduce using rule 45 ($@21)
    ENTRADA   reduce using rule 41 ($@19)
    SALIDA    reduce using rule 43 ($@20)
    $default  reduce using rule 34 ($@16)

    sentencia             go to state 91
    $@16                  go to state 34
    $@17                  go to state 35
    $@18                  go to state 36
    $@19                  go to state 37
    $@20                  go to state 38
    $@21                  go to state 39
    $@22                  go to state 40
    sentencia_asignacion  go to state 41
    variable              go to state 42


State 60

   48 sentencia: $@22 sentencia_hacer_hasta .

    $default  reduce using rule 48 (sentencia)


State 61

   49 sentencia_asignacion: variable ASIGNACION . expresion PUNTO_Y_COMA

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 92
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 62

   85 var_array: error .

    $default  reduce using rule 85 (var_array)


State 63

   82 var_array: IDENTIFICADOR .
   83          | IDENTIFICADOR . INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ
   84          | IDENTIFICADOR . INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ

    INI_DIM_MATRIZ  shift, and go to state 93

    $default  reduce using rule 82 (var_array)


State 64

   21 cuerpo_declar_variables: TIPO_BASICO $@8 $@9 lista_variables . PUNTO_Y_COMA
   76 lista_variables: lista_variables . COMA var_array
   78                | lista_variables . error var_array

    error         shift, and go to state 94
    PUNTO_Y_COMA  shift, and go to state 95
    COMA          shift, and go to state 96


State 65

   77 lista_variables: var_array .

    $default  reduce using rule 77 (lista_variables)


State 66

   25 cabecera_subprograma: TIPO_BASICO IDENTIFICADOR $@10 $@11 . PARENT_IZQUIERDO cabecera_subprograma2

    PARENT_IZQUIERDO  shift, and go to state 97


State 67

   75 expresion: error .

    $default  reduce using rule 75 (expresion)


State 68

   68 expresion: OPSIGNO . expresion

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 98
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 69

   64 expresion: OP_UNARIO . expresion

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 99
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 70

  102 const_matriz: INI_BLOQUE . lista_expresiones FIN_BLOQUE

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion          go to state 77
    variable           go to state 78
    lista_expresiones  go to state 100
    constante          go to state 80
    funcion            go to state 81
    const_matriz       go to state 82


State 71

   63 expresion: PARENT_IZQUIERDO . expresion PARENT_DERECHO

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 101
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 72

   97 constante: CONST_LOGICA .

    $default  reduce using rule 97 (constante)


State 73

   95 constante: CONST_ENTERO_SIN_SIGNO .

    $default  reduce using rule 95 (constante)


State 74

   98 constante: CONST_FLOTANTE .

    $default  reduce using rule 98 (constante)


State 75

   99 constante: CONST_CARACTER .

    $default  reduce using rule 99 (constante)


State 76

   79 variable: IDENTIFICADOR .
   80         | IDENTIFICADOR . INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
   81         | IDENTIFICADOR . INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
  100 funcion: IDENTIFICADOR . PARENT_IZQUIERDO lista_expresiones PARENT_DERECHO
  101        | IDENTIFICADOR . PARENT_IZQUIERDO PARENT_DERECHO

    PARENT_IZQUIERDO  shift, and go to state 102
    INI_DIM_MATRIZ    shift, and go to state 47

    $default  reduce using rule 79 (variable)


State 77

   69 expresion: expresion . OPSIGNO expresion
   70          | expresion . OPMULTIPLICATIVO expresion
   71          | expresion . OPIGUALDAD expresion
   72          | expresion . OPRELACION expresion
   73          | expresion . OPAND expresion
   74          | expresion . OPOR expresion
   94 lista_expresiones: expresion .

    OPOR              shift, and go to state 103
    OPAND             shift, and go to state 104
    OPIGUALDAD        shift, and go to state 105
    OPRELACION        shift, and go to state 106
    OPSIGNO           shift, and go to state 107
    OPMULTIPLICATIVO  shift, and go to state 108

    $default  reduce using rule 94 (lista_expresiones)


State 78

   67 expresion: variable .

    $default  reduce using rule 67 (expresion)


State 79

   80 variable: IDENTIFICADOR INI_DIM_MATRIZ lista_expresiones . FIN_DIM_MATRIZ
   81         | IDENTIFICADOR INI_DIM_MATRIZ lista_expresiones . FIN_DIM_MATRIZ INI_DIM_MATRIZ lista_expresiones FIN_DIM_MATRIZ
   93 lista_expresiones: lista_expresiones . COMA expresion

    COMA            shift, and go to state 109
    FIN_DIM_MATRIZ  shift, and go to state 110


State 80

   65 expresion: constante .

    $default  reduce using rule 65 (expresion)


State 81

   66 expresion: funcion .

    $default  reduce using rule 66 (expresion)


State 82

   96 constante: const_matriz .

    $default  reduce using rule 96 (constante)


State 83

   50 sentencia_si: SI PARENT_IZQUIERDO . expresion PARENT_DERECHO sentencia
   53             | SI PARENT_IZQUIERDO . expresion PARENT_DERECHO sentencia SI_NO $@23 sentencia $@24

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 111
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 84

   57 sentencia_mientras: MIENTRAS PARENT_IZQUIERDO . expresion PARENT_DERECHO $@26 sentencia

    error                   shift, and go to state 67
    OPSIGNO                 shift, and go to state 68
    OP_UNARIO               shift, and go to state 69
    INI_BLOQUE              shift, and go to state 70
    PARENT_IZQUIERDO        shift, and go to state 71
    CONST_LOGICA            shift, and go to state 72
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 73
    CONST_FLOTANTE          shift, and go to state 74
    CONST_CARACTER          shift, and go to state 75
    IDENTIFICADOR           shift, and go to state 76

    expresion     go to state 112
    variable      go to state 78
    constante     go to state 80
    funcion       go to state 81
    const_matriz  go to state 82


State 85

   58 sentencia_entrada: ENTRADA CADENA . PUNTO_Y_COMA
   59                  | ENTRADA CADENA . COMA lista_variables PUNTO_Y_COMA
